apps/pastefy/pastefy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastefy
  labels:
    app: pastefy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pastefy
  template:
    metadata:
      labels:
        app: pastefy
    spec:
      containers:
      - name: pastefy
        image: interaapps/pastefy:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
