apps/pastefy/pastefy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pastefy-service
  labels:
    app: pastefy
spec:
  selector:
    app: pastefy
  ports:
  - port: 80
    targetPort: 80
